--- a/index.html
+++ b/index.html
@@ -64,15 +64,122 @@
     </div><!-- bg 배경 끝 위치 -->
     <div class="project" id="project">
         <h1>app design : <span>TEAM</span></h1>
-        <div class="app">app</div>
+        <div class="app">
+            <div class="thum"><img src="./project/app/team.jpg" alt=""></div>
+            <div class="app_info">
+                <p>부제목</p>
+                <h3>앱 이름</h3>
+                <p class="date">2024.07.12 ~ 2024.07.23</p>
+                <ul>
+                    <li>3인 팀작업(참여도 100%)</li>
+                    <li>사용 프로그램</li>
+                    <li>photoshop, illustrator, figma</li>
+                    <li>제작 페이지</li>
+                    <li>앱 메인, 로그인, 회원가입, 장바구니... 총 ? 페이지</li>
+                    <li>담당 페이지</li>
+                    <li>로그인, 회원가입 총 2페이지</li>
+                </ul>
+                <div class="link">
+                    <a href="#" target="_blank">와이어프레임</a>
+                    <a href="#" target="_blank">기획서</a>
+                    <a href="#" target="_blank">결과보기</a>
+                </div>
+            </div>
+        </div>
         <h1>web design</h1>
-        <div class="web">web</div>
+        <div class="web">
+            <!-- swiper > swiper-wrapper > swiper-slide -->
+            <div class="swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="thum"><img src="./project/web/thumnails/web1.jpg" alt=""></div>
+                        <div class="web_info">
+                            <p></p>
+                            <h3>웹 이름</h3>
+                            <p class="date">2024.07.12 ~ 2024.07.23</p>
+                            <ul>
+                                <li>반응형웹</li>
+                                <li>사용 프로그램</li>
+                                <li>photoshop, illustrator, figma, html, css</li>
+                                <li>제작 페이지</li>
+                                <li>앱 메인, 로그인, 회원가입, 장바구니... 총 ? 페이지</li>
+                            </ul>
+                            <div class="link">
+                                <a href="#" target="_blank">github</a>
+                                <a href="#" target="_blank">기획서</a>
+                                <a href="#" target="_blank">결과보기</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="thum"><img src="./project/web/thumnails/web2.jpg" alt=""></div>
+                        <div class="web_info">
+                            <p></p>
+                            <h3>웹 이름</h3>
+                            <p class="date">2024.07.12 ~ 2024.07.23</p>
+                            <ul>
+                                <li>반응형웹</li>
+                                <li>사용 프로그램</li>
+                                <li>photoshop, illustrator, figma, html, css</li>
+                                <li>제작 페이지</li>
+                                <li>앱 메인, 로그인, 회원가입, 장바구니... 총 ? 페이지</li>
+                            </ul>
+                            <div class="link">
+                                <a href="#" target="_blank">github</a>
+                                <a href="#" target="_blank">기획서</a>
+                                <a href="#" target="_blank">결과보기</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- 내비게이션이 슬라이드 안에 있을 때 생성위치 -->
+            </div><!-- swiper 닫는 위치 -->
+            <!-- 내비게이션이 슬라이드 밖에 있을 때 생성위치 -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+            <!-- 이전다음 작성 후 script 추가 작성 -->
+        </div>
         <h1>sns design</h1>
-        <div class="sns">sns</div>
+        <div class="sns">
+            <div class="swiper"><!-- 보이는 영역 -->
+                <div class="swiper-wrapper"><!-- 움직이는 대상 -->
+                    <div class="swiper-slide"><img src="./project/design/sns/001.jpg" alt=""></div>
+                    <div class="swiper-slide"><img src="./project/design/sns/002.jpg" alt=""></div>
+                    <div class="swiper-slide"><img src="./project/design/sns/003.jpg" alt=""></div>
+                    <div class="swiper-slide"><img src="./project/design/sns/004.jpg" alt=""></div>
+                    <div class="swiper-slide"><img src="./project/design/sns/005.jpg" alt=""></div>
+                    <div class="swiper-slide"><img src="./project/design/sns/006.jpg" alt=""></div>
+                    <div class="swiper-slide"><img src="./project/design/sns/007.jpg" alt=""></div>
+                </div>
+            </div>
+        </div>
         <h1>banner design</h1>
-        <div class="banner">banner</div>
+        <div class="banner">
+            <p><img src="./project/design/banner/001.jpg" alt=""></p>
+            <p><img src="./project/design/banner/002.jpg" alt=""></p>
+            <p><img src="./project/design/banner/003.jpg" alt=""></p>
+            <p><img src="./project/design/banner/004.jpg" alt=""></p>
+            <p><img src="./project/design/banner/005.jpg" alt=""></p>
+            <p><img src="./project/design/banner/006.jpg" alt=""></p>
+        </div>
         <h1>detail design</h1>
-        <div class="detail">detail</div>
+        <div class="detail">
+            <p>클릭하면 크게 볼 수 있어요!</p>
+            <div class="swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><a href="#"><img src="./project/design/detail/001.jpg" alt=""></a></div>
+                    <div class="swiper-slide"><a href="#"><img src="./project/design/detail/002.jpg" alt=""></a></div>
+                    <div class="swiper-slide"><a href="#"><img src="./project/design/detail/003.jpg" alt=""></a></div>
+                    <div class="swiper-slide"><a href="#"><img src="./project/design/detail/004.jpg" alt=""></a></div>
+                    <div class="swiper-slide"><a href="#"><img src="./project/design/detail/005.jpg" alt=""></a></div>
+                    <div class="swiper-slide"><a href="#"><img src="./project/design/detail/006.jpg" alt=""></a></div>
+                </div>
+            </div>
+            <!-- swiper 클릭 시 실행되는 팝업 -->
+            <div class="big_bg">
+                <div class="img"><img src="./project/design/detail/001.jpg" alt=""></div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
