--- a/index.html
+++ b/index.html
@@ -3,181 +3,209 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>이재상 portfolio 2024</title>
+    <title>이재상 | 포트폴리오</title>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <!-- font-family: "DM Serif Display", serif;
-    font-family: "Noto Sans KR", sans-serif; -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tenor+Sans&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="./styles/jquery.fullPage.css">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/style.css">
     <script src="./scripts/script.js" defer></script>
+    <script src="./scripts/jquery.fullPage.js"></script>
 </head>
 <body>
-    <!-- 고정메뉴 -->
-    <nav>
-        <a href="#intro">intro</a>
-        <a href="#profile">profile</a>
-        <a href="#project">project</a>
-    </nav>
-    <div class="bg">
-        <!-- 1. 인트로 -->
-        <div class="intro" id="intro">
-            <p class="year">2024</p>
-            <div class="center">
-                <h1>portfolio</h1>
-                <p class="name">by 이재상</p>
-                <p class="info">무궁무진한 아이디어로 대박을 터트리는 웹디자이너!</p>
+    <div id="fullpage">
+        <div class="section"><!-- 1.인트로 -->
+            <div class="intro" id="intro">
+                <h1>UI/UX DESIGNER<br>PORTFOLIO</h1>
+                <p class="name">JAESANG LEE</p>
+                <div class="year">
+                    <p>2024</p>
+                </div>
+                <div class="contact">
+                    <h2>CONTACT</h2>
+                    <p>+82 10-8975-7656</p>
+                    <p>js56563@gmail.com</p>
+                </div>
             </div>
         </div>
-        <!-- 2. 프로필 -->
-        <div class="profile" id="profile">
-            <div class="photo">
-                <img src="./images/photo.jpg" alt="">
-            </div>
-            <div class="txt">
+        <div class="section"><!-- 2. 프로필 -->
+            <div class="profile" id="profile">
+                <div class="photo">
+                    <img src="./images/IMG_1589.jpeg" alt="">
+                    <p>창의적이고 사용자 중심의 디자인을 추구합니다.<br>끊임없이 연구하는 디자이너가 되겠습니다.</p>
+                </div>
                 <div class="list">
                     <h2>About</h2>
-                    <p>1997년 10월 13일</p>
-                    <p>인천광역시 부평구</p>
-                    <p>Phone : +82 10-8975-7656</p>
-                    <p>E-mail : js56563@gmail.com</p>
-                </div>
-                <div class="list">
-                    <h2>Education</h2>
-                    <p>2024.03 ~ 2024.08 웹디자인&웹퍼블리셔 양성 과정 수료</p>
-                    <p>2013.03 ~ 2016.02 계산공업고등학교 식품생명과학과 졸업</p>
-                </div>
-                <div class="list">
+                    <div class="first">
+                        <p><em>Name </em> <span> 이재상</span></p>
+                        <p><em>Birth </em> <span> 1997. 10. 13</span></p>
+                        <p><em>Contact </em> <span> 82+10 8975-7656</span></p>
+                        <p><em>Email </em> <span> js56563@gmail.com</span></p>
+                    </div>
+                    <h2>Edecation</h2>
+                    <h3>그린컴퓨터아카데미 UI/UX 반응형 웹디자인&웹퍼블리셔 수료</h3>
+                    <p><span>2024.03 ~ 2024.08</span></p>
+                    <h3>계산공업고등학교 식품생명과학과 졸업</h3>
+                    <p><span>2013.03 ~ 2016.02</span></p>
                     <h2>Skills</h2>
-                    <p><em>illustator </em>:<span> 로고디자인, 캐릭터 디자인, 패키지 디자인 가능</span></p>
-                    <p><em>photoshop </em>:<span> 배너, 상세, 웹 디자인 작업 가능</span></p>
-                    <p><em>GitHub </em>:<span> 소스 코드 관리 및 협업 가능</span></p>
-                    <p><em>HTML </em>:<span> 웹 페이지 구조 설계 및 콘텐츠 작성 가능</span></p>
-                    <p><em>CSS </em>:<span> 스타일링 및 레이아웃 디자인 가능</span></p>
-                    <p><em>JavaScript </em>:<span> 웹 인터랙션 및 동적 기능 구현 가능</span></p>
-                    <p><em>Figma </em>:<span> UI/UX 디자인 및 프로토타이핑 가능</span></p>
-                    <p><em>UI/UX </em>:<span> 사용자 경험 및 인터페이스 설계 가능</span></p>
-                </div>
-            </div>
-        </div>
-    </div><!-- bg 배경 끝 위치 -->
-    <div class="project" id="project">
-        <h1>app design : <span>TEAM</span></h1>
-        <div class="app">
-            <div class="thum"><img src="./project/app/team.jpg" alt=""></div>
-            <div class="app_info">
-                <p>부제목</p>
-                <h3>앱 이름</h3>
-                <p class="date">2024.07.12 ~ 2024.07.23</p>
-                <ul>
-                    <li>3인 팀작업(참여도 100%)</li>
-                    <li>사용 프로그램</li>
-                    <li>photoshop, illustrator, figma</li>
-                    <li>제작 페이지</li>
-                    <li>앱 메인, 로그인, 회원가입, 장바구니... 총 ? 페이지</li>
-                    <li>담당 페이지</li>
-                    <li>로그인, 회원가입 총 2페이지</li>
-                </ul>
-                <div class="link">
-                    <a href="#" target="_blank">와이어프레임</a>
-                    <a href="#" target="_blank">기획서</a>
-                    <a href="#" target="_blank">결과보기</a>
-                </div>
-            </div>
-        </div>
-        <h1>web design</h1>
-        <div class="web">
-            <!-- swiper > swiper-wrapper > swiper-slide -->
-            <div class="swiper">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <div class="thum"><img src="./project/web/thumnails/web1.jpg" alt=""></div>
-                        <div class="web_info">
-                            <p></p>
-                            <h3>웹 이름</h3>
-                            <p class="date">2024.07.12 ~ 2024.07.23</p>
-                            <ul>
-                                <li>반응형웹</li>
-                                <li>사용 프로그램</li>
-                                <li>photoshop, illustrator, figma, html, css</li>
-                                <li>제작 페이지</li>
-                                <li>앱 메인, 로그인, 회원가입, 장바구니... 총 ? 페이지</li>
-                            </ul>
-                            <div class="link">
-                                <a href="#" target="_blank">github</a>
-                                <a href="#" target="_blank">기획서</a>
-                                <a href="#" target="_blank">결과보기</a>
-                            </div>
-                        </div>
+                    <div class="skill">
+                        <p><span>FIGMA</span></p>
+                        <p><span>PS</span></p>
+                        <p><span>AI</span></p>
+                        <p><span>HTML</span></p>
+                        <p><span>CSS</span></p>
+                        <p><span>JAVASCRIPT</span></p>
                     </div>
-                    <div class="swiper-slide">
-                        <div class="thum"><img src="./project/web/thumnails/web2.jpg" alt=""></div>
-                        <div class="web_info">
-                            <p></p>
-                            <h3>웹 이름</h3>
-                            <p class="date">2024.07.12 ~ 2024.07.23</p>
-                            <ul>
-                                <li>반응형웹</li>
-                                <li>사용 프로그램</li>
-                                <li>photoshop, illustrator, figma, html, css</li>
-                                <li>제작 페이지</li>
-                                <li>앱 메인, 로그인, 회원가입, 장바구니... 총 ? 페이지</li>
-                            </ul>
-                            <div class="link">
-                                <a href="#" target="_blank">github</a>
-                                <a href="#" target="_blank">기획서</a>
-                                <a href="#" target="_blank">결과보기</a>
-                            </div>
+                </div>
+            </div>
+        </div>
+        <div class="section"><!-- 앱디자인 -->
+            <div class="project_app">
+                <h1>APP DESIGN</h1>
+                <div class="app">
+                    <div class="thum"><img src="./project/app/app.jpg" alt=""></div>
+                    <div class="info">
+                        <p>의류 커머스 쇼핑몰</p>
+                        <h3>MOODSCAN</h3>
+                        <p class="date">2024.05</p>
+                        <ul>
+                            <li>3인 팀작업</li>
+                            <li>사용 프로그램</li>
+                            <li>photoshop, illustrator, figma</li>
+                            <li>제작 페이지</li>
+                            <li>앱 메인, 로그인, 상품정보, 커뮤니티</li>
+                            <li>담당 페이지</li>
+                            <li>커뮤니티</li>
+                        </ul>
+                        <div class="link">
+                            <a href="https://www.figma.com/design/oWUsXhcU6pckWkDy2stm22/Untitled?t=W2FhveHuvTHFbaGM-0" target="_blank">와이어프레임</a>
+                            <a href="https://www.figma.com/proto/tgzT6Ve14KnCoyx2IMY0u7/240527---%EB%AC%B4%EB%93%9C%EC%8A%A4%EC%BA%94-ppt?node-id=1-3&t=YvPfF1s0J8vlksGf-0&scaling=contain&content-scaling=fixed&page-id=0%3A1" target="_blank">기획서</a>
+                            <a href="https://www.figma.com/proto/aSzI77nDBVrJv8IZPh6shI/240527-%EB%AC%B4%EB%93%9C%EC%8A%A4%EC%BA%94-_Prototype?node-id=355-5399&t=jjrItjoIs96buFWI-0&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=355%3A5399" target="_blank">결과보기</a>
                         </div>
                     </div>
                 </div>
-                <!-- 내비게이션이 슬라이드 안에 있을 때 생성위치 -->
-            </div><!-- swiper 닫는 위치 -->
-            <!-- 내비게이션이 슬라이드 밖에 있을 때 생성위치 -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-            <!-- 이전다음 작성 후 script 추가 작성 -->
+            </div>
         </div>
-        <h1>sns design</h1>
-        <div class="sns">
-            <div class="swiper"><!-- 보이는 영역 -->
-                <div class="swiper-wrapper"><!-- 움직이는 대상 -->
-                    <div class="swiper-slide"><img src="./project/design/sns/001.jpg" alt=""></div>
-                    <div class="swiper-slide"><img src="./project/design/sns/002.jpg" alt=""></div>
-                    <div class="swiper-slide"><img src="./project/design/sns/003.jpg" alt=""></div>
-                    <div class="swiper-slide"><img src="./project/design/sns/004.jpg" alt=""></div>
-                    <div class="swiper-slide"><img src="./project/design/sns/005.jpg" alt=""></div>
-                    <div class="swiper-slide"><img src="./project/design/sns/006.jpg" alt=""></div>
-                    <div class="swiper-slide"><img src="./project/design/sns/007.jpg" alt=""></div>
+        <div class="section"><!-- 웹디자인1 -->
+            <div class="project_web web1">
+                <h1>WEB DESIGN</h1>
+                <div class="web">
+                    <div class="info">
+                        <p>음향기기 브랜드</p>
+                        <h3>BOSE 리디자인</h3>
+                        <p class="date">2024.06</p>
+                        <ul>
+                            <li>1인 작업</li>
+                            <li>사용 프로그램</li>
+                            <li>photoshop, figma</li>
+                            <li>제작 페이지</li>
+                            <li>메인페이지, 상품목록, 상품정보</li>
+                        </ul>
+                        <div class="link">
+                            <a href="https://www.figma.com/design/q7A9Copz8CEpurZHpJU4hC/BOSE-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?node-id=0-1&t=1UnJnOkfYHkNbzZw-0" target="_blank">와이어프레임</a>
+                            <a href="https://www.figma.com/proto/q7A9Copz8CEpurZHpJU4hC/BOSE-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?node-id=129-4321&t=1UnJnOkfYHkNbzZw-0&scaling=contain&content-scaling=fixed&page-id=118%3A140" target="_blank">기획서</a>
+                            <a href="https://www.figma.com/proto/q7A9Copz8CEpurZHpJU4hC/BOSE-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?node-id=169-1026&t=1UnJnOkfYHkNbzZw-0&scaling=scale-down-width&content-scaling=fixed&page-id=0%3A1" target="_blank">결과보기</a>
+                        </div>
+                    </div>
+                    <div class="thum"><img src="./project/web/thumnails/bose.jpg" alt=""></div>
                 </div>
             </div>
         </div>
-        <h1>banner design</h1>
-        <div class="banner">
-            <p><img src="./project/design/banner/001.jpg" alt=""></p>
-            <p><img src="./project/design/banner/002.jpg" alt=""></p>
-            <p><img src="./project/design/banner/003.jpg" alt=""></p>
-            <p><img src="./project/design/banner/004.jpg" alt=""></p>
-            <p><img src="./project/design/banner/005.jpg" alt=""></p>
-            <p><img src="./project/design/banner/006.jpg" alt=""></p>
-        </div>
-        <h1>detail design</h1>
-        <div class="detail">
-            <p>클릭하면 크게 볼 수 있어요!</p>
-            <div class="swiper">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide"><a href="#"><img src="./project/design/detail/001.jpg" alt=""></a></div>
-                    <div class="swiper-slide"><a href="#"><img src="./project/design/detail/002.jpg" alt=""></a></div>
-                    <div class="swiper-slide"><a href="#"><img src="./project/design/detail/003.jpg" alt=""></a></div>
-                    <div class="swiper-slide"><a href="#"><img src="./project/design/detail/004.jpg" alt=""></a></div>
-                    <div class="swiper-slide"><a href="#"><img src="./project/design/detail/005.jpg" alt=""></a></div>
-                    <div class="swiper-slide"><a href="#"><img src="./project/design/detail/006.jpg" alt=""></a></div>
+        <div class="section"><!-- 웹디자인2 -->
+            <div class="project_web web2">
+                <div class="web">
+                    <div class="thum"><img src="./project/web/thumnails/muscle.jpg" alt=""></div>
+                    <div class="info">
+                        <p>스포츠웨어 브랜드</p>
+                        <h3>머슬암드 리디자인</h3>
+                        <p class="date">2024.07</p>
+                        <ul>
+                            <li>1인 작업</li>
+                            <li>사용 프로그램</li>
+                            <li>photoshop, figma</li>
+                            <li>제작 페이지</li>
+                            <li>메인페이지, 상품목록, 상품정보</li>
+                        </ul>
+                        <div class="link">
+                            <a href="https://www.figma.com/design/w0WhGaFWa1o9qmeQ3ZG9Ud/%EB%A8%B8%EC%8A%AC%EC%95%94%EB%93%9C-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?node-id=0-1&t=FHRoVWm3f5Wz0Ebs-0" target="_blank">와이어프레임</a>
+                            <a href="https://www.figma.com/proto/w0WhGaFWa1o9qmeQ3ZG9Ud/%EB%A8%B8%EC%8A%AC%EC%95%94%EB%93%9C-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?node-id=140-454&t=FHRoVWm3f5Wz0Ebs-0&scaling=contain&content-scaling=fixed&page-id=140%3A453" target="_blank">기획서</a>
+                            <a href="https://www.figma.com/proto/w0WhGaFWa1o9qmeQ3ZG9Ud/%EB%A8%B8%EC%8A%AC%EC%95%94%EB%93%9C-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?node-id=3-2&t=FHRoVWm3f5Wz0Ebs-0&scaling=scale-down-width&content-scaling=fixed&page-id=0%3A1" target="_blank">결과보기</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <!-- swiper 클릭 시 실행되는 팝업 -->
-            <div class="big_bg">
-                <div class="img"><img src="./project/design/detail/001.jpg" alt=""></div>
+        </div>
+        <div class="section"><!-- 웹디자인3 -->
+            <div class="project_web web3">
+                <div class="web">
+                    <div class="info">
+                        <p>헤어스타일링 브랜드</p>
+                        <h3>UNIX 리디자인</h3>
+                        <p class="date">2024.07</p>
+                        <ul>
+                            <li>1인 작업</li>
+                            <li>사용 프로그램</li>
+                            <li>photoshop, figma</li>
+                            <li>제작 페이지</li>
+                            <li>메인페이지</li>
+                        </ul>
+                        <div class="link">
+                            <a href="https://www.figma.com/design/T1bwaNlVVC52VmaPdicbD4/%EC%9C%A0%EB%8B%89%EC%8A%A4-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?node-id=0-1&t=1UnJnOkfYHkNbzZw-0" target="_blank">와이어프레임</a>
+                            <a>기획서(준비중)</a>
+                            <a href="https://www.figma.com/proto/T1bwaNlVVC52VmaPdicbD4/%EC%9C%A0%EB%8B%89%EC%8A%A4-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?node-id=184-70&t=kjnQaWLwTmF5mvwy-0&scaling=scale-down-width&content-scaling=fixed&page-id=0%3A1" target="_blank">결과보기</a>
+                        </div>
+                    </div>
+                    <div class="thum"><img src="./project/web/thumnails/unix.jpg" alt=""></div>
+                </div>
+            </div>
+        </div>
+        <div class="section"><!-- 웹디자인4 -->
+            <div class="project_web web4">
+                <div class="web">
+                    <div class="thum"><img src="./project/web/thumnails/omabebe.jpg" alt=""></div>
+                    <div class="info">
+                        <p>화장품 브랜드</p>
+                        <h3>오마베베 리디자인</h3>
+                        <p class="date">2024.06</p>
+                        <ul>
+                            <li>1인 작업</li>
+                            <li>사용 프로그램</li>
+                            <li>photoshop, figma</li>
+                            <li>제작 페이지</li>
+                            <li>메인페이지</li>
+                        </ul>
+                        <div class="link">
+                            <a href="https://www.figma.com/design/UBprnH28XPRHR4MYrcxwBW/%EC%98%A4%EB%A7%88%EB%B2%A0%EB%B2%A0-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?node-id=0-1&t=FHRoVWm3f5Wz0Ebs-0" target="_blank">와이어프레임</a>
+                            <a>기획서(준비중)</a>
+                            <a href="https://www.figma.com/proto/UBprnH28XPRHR4MYrcxwBW/%EC%98%A4%EB%A7%88%EB%B2%A0%EB%B2%A0-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?node-id=230-180&t=FHRoVWm3f5Wz0Ebs-0&scaling=scale-down-width&content-scaling=fixed&page-id=0%3A1" target="_blank">결과보기</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section"><!-- sns디자인 -->
+            <div class="project_sns">
+                <h1>SNS DESIGN</h1>
+                <div class="sns">
+                    <div class="swiper"><!-- 보이는 영역 -->
+                        <div class="swiper-wrapper"><!-- 움직이는 대상 -->
+                            <div class="swiper-slide"><img src="./project/design/sns/sns_1.jpg" alt=""></div>
+                            <div class="swiper-slide"><img src="./project/design/sns/sns_2.jpg" alt=""></div>
+                            <div class="swiper-slide"><img src="./project/design/sns/sns_3.jpg" alt=""></div>
+                            <div class="swiper-slide"><img src="./project/design/sns/sns_4.jpg" alt=""></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section"><!-- 마무리 -->
+            <div class="last">
+                <h1>THANK YOU</h1>
             </div>
         </div>
     </div>
